src/tedi/components/buttons/button-content/button-content.module.scss
/* ... */
.tedi-btn__icon--left,
.tedi-btn__icon--right {
  display: inline-flex;
  flex-shrink: 0;
  padding: 0;
}

.tedi-btn__icon {
  display: flex;
  align-items: center;
  justify-content: center;

  .tedi-btn--link & {
    vertical-align: text-bottom;
  }
}

.tedi-btn__inner {
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 1.5rem;
  min-height: 1.5rem;

  .tedi-btn--link.tedi-btn__icon-standalone--link:not(.tedi-btn--is-loading) & {
    display: inline-flex;
    align-items: flex-start;

    .tedi-btn__icon {
      @include mixins.responsive-styles(line-height, body-regular-line-height);
    }
  }

  .tedi-btn--link:not(.tedi-btn--is-loading) & {
    display: inline;
  }
}

.tedi-btn__spinner {
  stroke: currentcolor;
}

.tedi-btn--underline {
  .tedi-btn__text {
    text-decoration: underline;
  }
}

.tedi-btn--no-style {
  @include mixins.button-reset;
}

.tedi-btn--full-width {
  width: 100%;
}

